<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvity.BeginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/logo_app_3"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/app_description"
                    android:textColor="@color/colorBlack"
                    android:layout_marginBottom="20dp"
                    android:textSize="13sp" />

                <com.jama.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:carouselOffset="center"
                    app:enableSnapping="true"
                    app:indicatorAnimationType="drop"
                    app:indicatorPadding="5"
                    app:indicatorRadius="5"
                    app:indicatorSelectedColor="@color/colorAccent"
                    app:indicatorUnselectedColor="@color/colorPrimary"
                    app:scaleOnScroll="false"
                    app:setAutoPlay="true"
                    app:setAutoPlayDelay="3000"
                    app:size="10"
                    app:spacing="10" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llbottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_button_fill"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_btn_register"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_button_outline"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_btn_login"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>